--- a/ru-page.html
+++ b/ru-page.html
@@ -77,7 +77,7 @@
                   </p>
                   <div class="hero__btn">
                      <a class="hero__link btn" href="#">
-                        Расчитать цены
+                        Узнать о&nbsp;ценах
                      </a>
                   </div>
                </div>
