--- a/ru-page.html
+++ b/ru-page.html
@@ -412,8 +412,8 @@
                      <div class="sale__timer-countdown">
                         <div class="timer">
                            <div class="timer__items">
-                              <div class="timer__item timer__days">00</div>
-                              <span>:</span>
+<!--                               <div class="timer__item timer__days">00</div>
+                              <span>:</span> -->
                               <div class="timer__item timer__hours">00</div>
                               <span>:</span>
                               <div class="timer__item timer__minutes">00</div>
